--- a/README
+++ b/README
@@ -2,3 +2,14 @@ rtset
 =====
 
 Configure real-time priorities with a centralized configuration file.
+
+
+Build and Install
+-----------------
+
+This package uses autotools. To build and install from this source:
+
+	autoreconf --install
+	configure
+	make
+	make install
